--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     environment:
       - USER_SERVICE_URL="http://dslinked.in/user-service/"
       - POST_SERVICE_URL="http://dslinked.in/"
-      - NOTIF_SERVICE_URL="http://dslinked.in/notif-service/"
+      - NOTIF_SERVICE_URL="http://dslinked.in/notification-service"
 
     
   node-nginx-post-service:
@@ -81,7 +81,7 @@ services:
     environment:
       - USER_SERVICE_URL="http://dslinked.in/user-service/"
       - POST_SERVICE_URL="http://dslinked.in/"
-      - NOTIF_SERVICE_URL="http://dslinked.in/notif-service/"
+      - NOTIF_SERVICE_URL="http://dslinked.in/notification-service/"
   
   
   userdb-mongo-express:
@@ -147,3 +147,12 @@ services:
     networks:
       linkedIn:
         ipv4_address: 172.20.0.11
+
+  nginx-rev:
+    image: nginx:alpine3.18
+    container_name: nginx-rev
+    volumes:
+      - ./reverse-proxy/default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      linkedIn: 
+        ipv4_address: 172.20.0.15
